--- a/recipes/SCC/SpinachAndChickenCasserole.html
+++ b/recipes/SCC/SpinachAndChickenCasserole.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <div>
-        <head>
-            <link rel="stylesheet" href="./SaCC.css"
-        </head>
-        <body>
-            <header>
-                <nav id="navbar">
-                    <h1>Spinach and Chicken Casserole</h1>
-                </nav>
-                <img src="./Pictures/CCR.jpg" alt="Finished Chicken Casserole">
-                <p>Here's a delicious Spinach Chicken Casserole that's good for any occasion.</p>
-            </header>
-            <main>
-                <div id="ingredients">
-
+    <head>
+        <link rel="stylesheet" href="./SaCC.css"
+    </head>
+    <body>
+        <header>
+            <nav>
+                <div id="headTitle">
+                    <h1>Odin Recipes</h1>
                 </div>
-                <div id="instructions">
+                <ul>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li>Recipes</li>
+                    <li>Additional Info</li>
+                </ul>
+            </nav>
+            <img src="./Pictures/CCR.jpg" alt="Finished Chicken Casserole">
+        </header>
+        <main>
+            <div id="ingredients">
+                <p>;alksjdhfa;slkjfha;sl</p>
+            </div>
+            <div id="instructions">
 
-                </div>
-            </main>
-            <footer>
-                
-            </footer>
-        </body>
-    </div>
+            </div>
+        </main>
+        <footer>
+            
+        </footer>
+    </body>
 </html>
