--- a/index.html
+++ b/index.html
@@ -18,18 +18,41 @@
         </header>
         <main>
             <div id="mCon">
-                <ul>
-                    <h2>Favorites</h2>
-                    <li><a href="./recipes/SCC/SpinachAndChickenCasserole.html">Spinach and Chicken Casserole</a></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <h2>Four Easy-to-Make, Delicious Recipes.</h2>
+                <div id="grid">
+                    <div id="recipe1" class="recipe-links">
+                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
+                            <h3>Spinach And Chicken Casserole</h3>
+                            <p>asdjfh</p>
+                        </a>
+                    </div>
+                    <div id="recipe2" class="recipe-links">
+                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
+                            <h3>Spinach And Chicken Casserole</h3>
+                            <p>asdjfh</p>
+                        </a>
+                    </div>
+                    <div id="recipe3" class="recipe-links">
+                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
+                            <h3>Spinach And Chicken Casserole</h3>
+                            <p>asdjfh</p>
+                        </a>
+                    </div>
+                    <div id="recipe4" class="recipe-links">
+                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
+                            <h3>Spinach And Chicken Casserole</h3>
+                            <p>asdjfh</p>
+                        </a>
+                    </div>
+                </div>
+                
             </div>
-
         </main>
         <footer>
-
+            <div>
+                <p>Copied the recipes from:</p>
+                <a href="https://www.allrecipes.com/recipe/240431/spinach-and-chicken-casserole/"> Spinach Chicken Casserole</a>
+            </div>
         </footer>
     </body>
 </html>
