--- a/index.html
+++ b/index.html
@@ -4,25 +4,19 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-
         <header>
             <nav>
                 <div id="headTitle">
                     <h1>Odin Recipes</h1>
                 </div>
                 <ul>
-                    <li>About</li>
-                    <li>Recipes</li>
-                    <li>Additional Info</li>
+                    <li>Addtional Info</li>
                 </ul>
             </nav>
         </header>
-
         <main>
             <div id="mCon">
-
                 <h2>Four Easy-to-Make, Delicious Recipes.</h2>
-
                 <div id="grid">
                     <div id="recipe1" class="recipe-links">
                         <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
@@ -33,40 +27,31 @@
                                 <li>Calories Per Serving: 601</li>
                             </ul>
                             <h4>Additonal Info:</h4>
-                            <p>Marinate in the fridge for asdfsafda2 hours for best results.</p>
+                            <p>Marinate in the fridge for 2 hours for best results.</p>
                         </a>
                     </div>
-
                     <div id="recipe2" class="recipe-links">
                         <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
                             <h3> And Chicken Casserole</h3>
                             <p>asdjfasdfasdffh</p>
                         </a>
                     </div>
-
                     <div id="recipe3" class="recipe-links">
                         <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
                             <h3>Spinaasdfasdfadfch And Chicken Casserole</h3>
                             <p>aasdfasdfsdjfh</p>
                         </a>
                     </div>
-
                     <div id="recipe4" class="recipe-links">
                         <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
                             <h3>Spinach And Chicken Casserole</h3>
                             <p>asdjfh</p>
                         </a>
                     </div>
-
                 </div>
             </div>
         </main>
-        
         <footer>
-            <div>
-                <p>Copied the recipes from:</p>
-                <a href="https://www.allrecipes.com/recipe/240431/spinach-and-chicken-casserole/"> Spinach Chicken Casserole</a>
-            </div>
         </footer>
 
     </body>
