--- a/recipes/recipe4/SpinachAndChickenCasserole.html
+++ b/recipes/recipe4/SpinachAndChickenCasserole.html
@@ -13,9 +13,9 @@
                     <li><a href="../../index.html">Home</a></li>
                 </ul>
             </nav>
+            <img id="info-img" src="./Pictures/CCR.jpg" alt="Finished Chicken Casserole">
         </header>
         <main>
-            <img src="./Pictures/CCR.jpg" alt="Finished Chicken Casserole">
             <div id="info-container">
                 <div id="ingredients">
                     <h3>Ingredients:</h3>
