--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <h1>Odin Recipes</h1>
                 </div>
                 <ul>
-                    <li>Addtional Info</li>
+                    <li><a href="./README.md">Addtional Info</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,21 +31,39 @@
                         </a>
                     </div>
                     <div id="recipe2" class="recipe-links">
-                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
-                            <h3> And Chicken Casserole</h3>
-                            <p>asdjfasdfasdffh</p>
+                        <a  class="recipe-info" href="./recipes/BCS/Broccoli Cheddar Soup.html">
+                            <h3>Broccoli Cheddar Soup</h3>
+                            <ul>
+                                <li>Pred and Cook Time: 1 hr 5 mins</li>
+                                <li>Servings: 8</li>
+                                <li>Calories Per Server: 304</li>
+                            </ul>
+                            <h4>Additonal Info: </h4>
+                            <p>Additonal Info: The cook used 2% milk, but half and hald can be used.</p>
                         </a>
                     </div>
                     <div id="recipe3" class="recipe-links">
-                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
-                            <h3>Spinaasdfasdfadfch And Chicken Casserole</h3>
-                            <p>aasdfasdfsdjfh</p>
+                        <a  class="recipe-info" href="./recipes/ORPP/OvenRoastedParmesanPotatoes.html">
+                            <h3>Oven Roasted Parmesan Potatoes</h3>
+                            <ul>
+                                <li>Prep and Cook Time: 45 mins</li>
+                                <li>Servings: 6</li>
+                                <li>Calories Per Serving: 162</li>
+                            </ul>
+                            <h4>Additonal Info: </h4>
+                            <p>Distribute the parmesan mixture as evenly across the potatoes</p>
                         </a>
                     </div>
                     <div id="recipe4" class="recipe-links">
-                        <a  class="recipe-info" href="./recipes/SCC/SpinachAndChickenCasserole.html">
-                            <h3>Spinach And Chicken Casserole</h3>
-                            <p>asdjfh</p>
+                        <a  class="recipe-info" href="./recipes/SCBS/SlowCookerBeefStew.html">
+                            <h3>Slow Cooker Beef Stew</h3>
+                            <ul>
+                                <li>Prep and Cook Time: 4 hrs 20 mins </li>
+                                <li>Servings: 6</li>
+                                <li>Calories Per Serving: 576</li>
+                            </ul>
+                            <h4>Additonal Info: </h4>
+                            <p>Cook on high for 4 hours. Although, it is recommended that you cook on low for 10 - 12 hours.</p>
                         </a>
                     </div>
                 </div>
