--- a/recipes/SCC/SpinachAndChickenCasserole.html
+++ b/recipes/SCC/SpinachAndChickenCasserole.html
@@ -16,6 +16,7 @@
             <img id="info-img" src="./Pictures/CCR.jpg" alt="Finished Chicken Casserole">
         </header>
         <main>
+            <h2>Spinach and Chicken Casserole</h2>
             <div id="info-container">
                 <div id="ingredients">
                     <h3>Ingredients:</h3>
