--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <h1>Odin Recipes</h1>
                 </div>
                 <ul>
-                    <li><a href="./README.md">Addtional Info</a></li>
+                    <li><a href="./README.md" target="_blank">Addtional Info</a></li>
                 </ul>
             </nav>
         </header>
